# SpringAirlines-Monitor

./: .gitignore  README.md  fare-monitor.spec  fare-monitor.toml  pyproject.toml
.github/workflows/: windows-release.yml
deploy/: fare-monitor.env.example  run_daily_report.sh
docs/: current-live-coverage.md  linux-deployment.md
fare_monitor/: __init__.py  __main__.py  browser_agent.py  browser_worker.py  cli.py  collector.py  config.py  constants.py  emailer.py  models.py  probe.py  reporting.py  sample_data.py  stage_logging.py  storage.py  utils.py
fare_monitor/sources/: __init__.py  airchina.py  ana.py  base.py  jal.py  jetstar_japan.py  peach.py  qunar.py  spring_airlines.py  spring_japan.py
tests/: test_config.py  test_email.py  test_models.py  test_reporting.py  test_smoke.py  test_sources.py  test_storage.py
