[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fare-monitor"
version = "0.1.0"
description = "Monitor Beijing to Japan airfare prices and generate offline reports."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "jinja2>=3.1",
  "playwright>=1.52",
  "pypdf>=5.0",
  "requests>=2.31",
  "typer>=0.12",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
